# mozzie

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bash_script/: install_metapop.sh
data/: README.md
notebooks/: centre_release_ae.ipynb  fitness_autoemulate.ipynb  multi_release_ae.ipynb
py_script/: build_param_files.py  pl_run_full_set.py  run_default.py  run_full_set.py  run_one_expriment.py  run_one_set.py
py_script/data_prep/: load_local_data.py  load_state_data.py  load_state_site_data.py  load_total_data.py
py_script/generate/: build_coord_files.py  build_param_files.py  pl_run_full_set.py  run_default.py  run_full_set.py  run_one_experiment.py
src/mossie/: __init__.py
src/mozzie/: __init__.py  construct.py  coords.py  data_prep.py  generate.py  parsing.py  visualise.py
tests/: conftest.py  test_construct.py  test_coords.py  test_data_prep.py  test_generate.py  test_if_metapop.py  test_parsing.py  test_placeholder.py  test_visualise.py
tests/test_data/: LocalDataExample.txt  TotalsDataExample.txt  test_coord_params.txt  test_coords.csv  test_params.txt
